CB-008 change all links on real

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                             <button id="theme_toggle" class="theme_toggle">
                                 <img src="./assets/images/sun.svg" alt="sun" />
                             </button>
-                            <button class="button blue secondary">Get Started</button>
+                            <a href="https://t.me/CryptoBot" target="_blank" class="button blue secondary">Get Started</a>
                         </div>
                     </div>
                 </div>
@@ -42,9 +42,9 @@
                             Seamlessly accept crypto payments<br/> in your Telegram bots and services.
                         </p>
                         <div>
-                            <button class="button blue">
+                            <a href="https://t.me/CryptoBot" target="_blank" class="button blue">
                                 Get started
-                            </button>
+                            </a>
                         </div>
                     </div>
                     <div class="hero_bots">
@@ -116,7 +116,7 @@
                     </div>
                     <div class="flex_width_40">
                         <h2 class="title white_color mb_32">
-                        <span class="backlight">
+                        <span class="blue_color">
                             Instant<br/>Auto Sales:
                         </span>
                             <br/>
@@ -125,7 +125,7 @@
                         <p class="text white_color mb_32">
                             Immediately deliver digital products and services to your users.
                         </p>
-                        <button class="button blue">Open API Docs</button>
+                        <a href="https://help.crypt.bot/crypto-pay-api" target="_blank" class="button blue">Open API Docs</a>
                     </div>
                 </div>
                 <div class="slide">
@@ -151,7 +151,7 @@
                     </div>
                     <div class="flex_width_40">
                         <h2 class="title white_color mb_32">
-                            <span class="backlight">
+                            <span class="blue_color">
                                 Channels
                                 <br/>
                                 integration:
@@ -162,7 +162,7 @@
                         <p class="text white_color mb_32">
                             Automatically unlock exclusive content to your users.
                         </p>
-                        <button class="button blue">Open API Docs</button>
+                        <a href="https://help.crypt.bot/crypto-pay-api" target="_blank" class="button blue">Open API Docs</a>
                     </div>
                 </div>
                 <div class="slide">
@@ -195,7 +195,7 @@
                     </div>
                     <div class="flex_width_40">
                         <h2 class="title white_color mb_32">
-                            <span class="backlight">
+                            <span class="blue_color">
                                 Endless<br/>customization:
                             </span>
                             <br/>
@@ -204,7 +204,7 @@
                         <p class="text white_color mb_32">
                             Receive successful payment notifications in real-time. Integrate to any scenario of your service.
                         </p>
-                        <button class="button blue">Open API Docs</button>
+                        <a href="https://help.crypt.bot/crypto-pay-api" target="_blank" class="button blue">Open API Docs</a>
                     </div>
                 </div>
             </div>
@@ -229,7 +229,7 @@
                             Bill any supported cryptocurrencies with
                             <span class="medium_text">asset</span>
                             parameter in
-                            <a href="#" class="link">GetInvoice</a>
+                            <a href="https://help.crypt.bot/crypto-pay-api#getInvoices" target="_blank" class="link">GetInvoice</a>
                             method
                         </p>
                     </div>
@@ -341,8 +341,8 @@
                                         One click to start
                                     </h3>
                                     <p class="text">
-                                        Open <a href="#" class="link">@CryptoBot</a>,
-                                        go to <a href="#" class="link">Crypto Pay</a>
+                                        Open <a href="https://t.me/CryptoBot" target="_blank" class="link">@CryptoBot</a>,
+                                        go to <a href="https://t.me/CryptoBot?start=pay" target="_blank" class="link">Crypto Pay</a>
                                         and tap Create App to get API Token
                                     </p>
                                 </div>
@@ -406,7 +406,7 @@
                                         Real-time exchange rates
                                     </h3>
                                     <p class="text">
-                                        Request up to date currency rate with the <a href="#" class="link">getExchangeRates</a> API method
+                                        Request up to date currency rate with the <a href="https://help.crypt.bot/crypto-pay-api#getExchangeRates" target="_blank" class="link">getExchangeRates</a> API method
                                     </p>
                                 </div>
                             </div>
@@ -448,8 +448,8 @@
                             Payment statistics
                         </h3>
                         <p class="text">
-                            Open <a href="#" class="link">@CryptoBot</a>, go to <a href="#" class="link">Crypto Pay</a> and
-                            <a href="#" class="link">My Apps</a>,<br/>App Name to get Statistics
+                            Open <a href="https://t.me/CryptoBot" target="_blank" class="link">@CryptoBot</a>, go to <a href="https://t.me/CryptoBot?start=pay" target="_blank" class="link">Crypto Pay</a> and
+                            <a href="https://t.me/CryptoBot" target="_blank" class="link">My Apps</a>,<br/>App Name to get Statistics
                         </p>
                     </div>
                 </div>
@@ -551,7 +551,7 @@
                                     Send coins to users
                                 </h3>
                                 <p class="text">
-                                    Automate payouts to users with <a href="#" class="link">transfer</a> API method
+                                    Automate payouts to users with <a href="https://help.crypt.bot/crypto-pay-api#transfer" target="_blank" class="link">transfer</a> API method
                                 </p>
                             </div>
                         </div>
@@ -587,7 +587,7 @@
                                 </h3>
                                 <p class="text">
                                     Use <span class="medium_text">allow_anonymous</span> parameter
-                                    in <a href="#" class="link">createInvoice</a> method to give user
+                                    in <a href="https://help.crypt.bot/crypto-pay-api#createInvoice" target="_blank" class="link">createInvoice</a> method to give user
                                     an option to remain private
                                 </p>
                             </div>
@@ -601,7 +601,7 @@
         <div class="container offsets_bottom offsets_top">
             <div class="quick-start">
                 <h2 class="title">
-                    Quick start using <span class="backlight">Crypto pay</span>
+                    Quick start using <span class="blue_color">Crypto pay</span>
                 </h2>
                 <div class="quick-start_step">
                     <div class="quick-start_step__desc flex_width_40">
@@ -613,16 +613,16 @@
                         </h3>
                         <ol class="list numeric">
                             <li class="text">
-                                <span class="text">Open <a href="#" class="link">@CryptoBot</a></span>
+                                <span class="text">Open <a href="https://t.me/CryptoBot" target="_blank" class="link">@CryptoBot</a></span>
                             </li>
                             <li class="text">
-                                <span class="text">Go to <a href="#" class="link">Crypto Pay</a></span>
+                                <span class="text">Go to <a href="https://t.me/CryptoBot?start=pay" target="_blank" class="link">Crypto Pay</a></span>
                             </li>
                             <li class="text">
-                                <span class="text">Tap <a href="#" class="link">Create App</a></span>
+                                <span class="text">Tap <a href="https://t.me/CryptoBot?start=pay" target="_blank" class="link">Create App</a></span>
                             </li>
                             <li class="text">
-                                <span class="text">Get <a href="#" class="link">API Token</a></span>
+                                <span class="text">Get <a href="https://t.me/CryptoBot" target="_blank" class="link">API Token</a></span>
                             </li>
                         </ol>
                     </div>
@@ -664,16 +664,16 @@
                         </p>
                         <ul class="list">
                             <li class="text blue_color">
-                                <a href="#" class="link">URL query string</a>
+                                <a href="https://en.wikipedia.org/wiki/Query_string" target="_blank" class="link">URL query string</a>
                             </li>
                             <li class="text blue_color">
-                                <a href="#" class="link">application/json </a>
+                                <a href="https://help.crypt.bot/crypto-pay-api#authorizing-your-app" target="_blank" class="link">application/json</a>
                             </li>
                             <li class="text blue_color">
-                                <a href="#" class="link">application/x-www-form-urlencoded</a>
+                                <a href="https://help.crypt.bot/crypto-pay-api#authorizing-your-app" target="_blank" class="link">application/x-www-form-urlencoded</a>
                             </li>
                             <li class="text blue_color">
-                                <a href="#" class="link">multipart/form-data</a>
+                                <a href="https://help.crypt.bot/crypto-pay-api#authorizing-your-app" target="_blank" class="link">multipart/form-data</a>
                             </li>
                         </ul>
                     </div>
@@ -691,11 +691,11 @@
                         </p>
                         <ul class="list">
                             <li class="text blue_color">
-                                <a href="#" class="link">getInvoices</a>
+                                <a href="https://help.crypt.bot/crypto-pay-api#getInvoices" target="_blank" class="link">getInvoices</a>
                                 <span class="text"> method to get a list of created invoices.</span>
                             </li>
                             <li class="text blue_color">
-                                <a href="#" class="link">Webhooks</a>
+                                <a href="https://help.crypt.bot/crypto-pay-api#webhooks" target="_blank" class="link">Webhooks</a>
                                 <span class="text"> to receive updates in realtime.</span>
                             </li>
                         </ul>
@@ -724,9 +724,9 @@
                         <p class="text white_color mb_32">
                             Explore available methods and types<br/>and integrate them in any programming language.
                         </p>
-                        <button class="button white">
+                        <a href="https://help.crypt.bot/crypto-pay-api" target="_blank" class="button white">
                             Open API Docs
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -806,9 +806,9 @@
                         </p>
                     </div>
                 </div>
-                <button class="button blue">
+                <a href="https://t.me/CryptoPayDev" target="_blank" class="button blue">
                     Open Devs chat
-                </button>
+                </a>
             </div>
         </div>
     </div>
@@ -824,7 +824,7 @@
                         <a href="#feature" class="footer_menu__item">Features</a>
                         <a href="#quick_start" class="footer_menu__item">How to start</a>
                     </div>
-                    <button class="button white">Get Started</button>
+                    <a href="https://t.me/CryptoBot" target="_blank" class="button white">Get Started</a>
                 </div>
                 <p class="text white_color">
                     &#169; 2023 Crypto Bot
