CB-007 change background image to css

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,6 @@
                         </div>
                         <div class="header_buttons">
                             <button id="theme_toggle" class="theme_toggle">
-                                <img src="./assets/images/sun.svg" alt="sun" />
                             </button>
                             <a href="https://t.me/CryptoBot" target="_blank" class="button blue secondary">Get Started</a>
                         </div>
@@ -82,7 +81,8 @@
                 </div>
                 <div class="hero_phone flex_width_40">
                     <div class="hero_phone-wrap">
-                        <img src="./assets/images/phone.png" alt="phone crypto bot">
+                        <div class="hero_phone__image">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -458,7 +458,7 @@
                         <div class="feature_coins">
                             <div class="feature_coins__animation">
                                 <div class="feature_coins__image">
-                                    <div class="feature_coins__messages full_size" style="background-image: url('assets/images/phone_small.png')">
+                                    <div class="feature_coins__messages full_size">
                                         <div class="message preview">
                                             <div class="sender">
                                                 <div class="sender_wrapper">
@@ -716,7 +716,7 @@
     <div id="api" class="segment white">
         <div class="container offsets_bottom offsets_top">
             <div class="api">
-                <div class="api_wrapper" style="background-image: url('assets/images/api.png')">
+                <div class="api_wrapper">
                     <div class="api_content">
                         <h2 class="title white_color mb_32">
                             Crypto Pay API
