CB-008 add dark theme

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>CryptoBot</title>
 </head>
-<body class="white_theme">
+<body class="def white_theme">
     <div id="header" class="segment white">
         <div class="header">
             <div class="container">
@@ -217,7 +217,7 @@
             </div>
         </div>
     </div>
-    <div id="feature" class="segment white offsets_bottom">
+    <div id="feature" class="segment white offsets_bottom offsets_top">
         <div class="container">
             <div class="features">
                 <div class="feature">
@@ -718,10 +718,10 @@
             <div class="api">
                 <div class="api_wrapper">
                     <div class="api_content">
-                        <h2 class="title white_color mb_32">
+                        <h2 class="title white_color">
                             Crypto Pay API
                         </h2>
-                        <p class="text white_color mb_32">
+                        <p class="text white_color">
                             Explore available methods and types<br/>and integrate them in any programming language.
                         </p>
                         <a href="https://help.crypt.bot/crypto-pay-api" target="_blank" class="button white">
