CB-009 add full adaptive for site

--- a/src/index.html
+++ b/src/index.html
@@ -222,9 +222,9 @@
     <div id="feature" class="segment white offsets_bottom offsets_top">
         <div class="container">
             <div class="features">
-                <div class="feature">
+                <div class="feature feature_currency_wrapper">
                     <div class="feature_currency__title">
-                        <h3 class="title mb_20">
+                        <h3 class="title">
                             Accept a wide range of cryptocurrencies
                         </h3>
                         <p class="text">
@@ -553,25 +553,31 @@
                     <div class="feature flex_width_40">
                         <div class="feature_payment">
                             <div class="feature_payment__animation flex_center">
-                                <div class="message last_triangle">
-                                    &#127965; <span class="medium_text">Anonymous</span> paid your invoice #IV53.<br/>
-                                    You received <span class="medium_text">3442 TON ($5000).</span><br/>
-                                    <br/>
-                                    &#128172; A generous donation! Keep working hard  &#128170;
+                                <div class="message big last_triangle">
+                                    <div class="message_content">
+                                        &#127965; <span class="medium_text">Anonymous</span> paid your invoice #IV53.<br/>
+                                        You received <span class="medium_text">3442 TON ($5000).</span><br/>
+                                        <br/>
+                                        &#128172; A generous donation! Keep working hard  &#128170;
+                                    </div>
+                                    <div class="message_time">21:25</div>
+                                </div>
+                                <div class="message big last_triangle hide">
+                                    <div class="message_content">
+                                        &#127965; <span class="medium_text">Anonymous</span> paid your invoice #IV80.<br/>
+                                        You received <span class="medium_text">3823 TON ($6500).</span><br/>
+                                        <br/>
+                                        &#128172; A bountiful gift! Keep reaching for the stars! &#128588;
+                                    </div>
                                     <div class="message_time">21:25</div>
                                 </div>
                                 <div class="message last_triangle hide">
-                                    &#127965; <span class="medium_text">Anonymous</span> paid your invoice #IV80.<br/>
-                                    You received <span class="medium_text">3823 TON ($6500).</span><br/>
-                                    <br/>
-                                    &#128172; A bountiful gift! Keep reaching for the stars! &#128588;
-                                    <div class="message_time">21:25</div>
-                                </div>
-                                <div class="message last_triangle hide">
-                                    &#127965; <span class="medium_text">Anonymous</span> paid your invoice #IV80.<br/>
-                                    You received <span class="medium_text">1176 TON ($2000).</span><br/>
-                                    <br/>
-                                    &#128172;  A substantial gift! Keep striving for excellence! &#127881;
+                                    <div class="message_content">
+                                        &#127965; <span class="medium_text">Anonymous</span> paid your invoice #IV80.<br/>
+                                        You received <span class="medium_text">1176 TON ($2000).</span><br/>
+                                        <br/>
+                                        &#128172;  A substantial gift! Keep striving for excellence! &#127881;
+                                    </div>
                                     <div class="message_time">21:25</div>
                                 </div>
                             </div>
@@ -597,30 +603,32 @@
                 <h2 class="title">
                     Quick start using <span class="blue_color">Crypto pay</span>
                 </h2>
-                <div class="quick-start_step">
-                    <div class="quick-start_step__desc flex_width_40">
+                <div class="quick-start_step reverse">
+                    <div class="quick-start_step__title flex_width_40">
                         <div class="quick-start_step__number">
                             1
                         </div>
-                        <h3 class="title">
-                            Authorizing your app
-                        </h3>
-                        <ol class="list numeric">
-                            <li class="text">
-                                <span class="text">Open <a href="https://t.me/CryptoBot" target="_blank" class="link">@CryptoBot</a></span>
-                            </li>
-                            <li class="text">
-                                <span class="text">Go to <a href="https://t.me/CryptoBot?start=pay" target="_blank" class="link">Crypto Pay</a></span>
-                            </li>
-                            <li class="text">
-                                <span class="text">Tap <a href="https://t.me/CryptoBot?start=pay" target="_blank" class="link">Create App</a></span>
-                            </li>
-                            <li class="text">
-                                <span class="text">Get <a href="https://t.me/CryptoBot" target="_blank" class="link">API Token</a></span>
-                            </li>
-                        </ol>
+                        <div class="quick-start_step__desc">
+                            <h3 class="title">
+                                Authorizing your app
+                            </h3>
+                            <ol class="list numeric">
+                                <li class="text">
+                                    <span class="text">Open <a href="https://t.me/CryptoBot" target="_blank" class="link">@CryptoBot</a></span>
+                                </li>
+                                <li class="text">
+                                    <span class="text">Go to <a href="https://t.me/CryptoBot?start=pay" target="_blank" class="link">Crypto Pay</a></span>
+                                </li>
+                                <li class="text">
+                                    <span class="text">Tap <a href="https://t.me/CryptoBot?start=pay" target="_blank" class="link">Create App</a></span>
+                                </li>
+                                <li class="text">
+                                    <span class="text">Get <a href="https://t.me/CryptoBot" target="_blank" class="link">API Token</a></span>
+                                </li>
+                            </ol>
+                        </div>
                     </div>
-                    <div class="flex_width_60">
+                    <div class="quick-start_step__visual flex_width_60">
                         <div class="quick-start_step__example">
                             <div class="quick-start_step__content full_size flex_center background_purple_grad">
                                 <div class="message first">
@@ -637,7 +645,7 @@
                     </div>
                 </div>
                 <div class="quick-start_step">
-                    <div class="flex_width_60">
+                    <div class="quick-start_step__visual flex_width_60">
                         <div class="quick-start_step__example">
                             <div class="quick-start_step__content full_size flex_center background_yellow_grad">
                                 <div class="message codes">
@@ -653,55 +661,59 @@
                             </div>
                         </div>
                     </div>
-                    <div class="quick-start_step__desc flex_width_40">
+                    <div class="quick-start_step__title flex_width_40">
                         <div class="quick-start_step__number">
                             2
                         </div>
-                        <h3 class="title">
-                            Crypto Pay API Request
-                        </h3>
-                        <p class="text">
-                            Requests are only served over HTTPS To pass parameters use:
-                        </p>
-                        <ul class="list">
-                            <li class="text blue_color">
-                                <a href="https://en.wikipedia.org/wiki/Query_string" target="_blank" class="link">URL query string</a>
-                            </li>
-                            <li class="text blue_color">
-                                <a href="https://help.crypt.bot/crypto-pay-api#authorizing-your-app" target="_blank" class="link">application/json</a>
-                            </li>
-                            <li class="text blue_color">
-                                <a href="https://help.crypt.bot/crypto-pay-api#authorizing-your-app" target="_blank" class="link">application/x-www-form-urlencoded</a>
-                            </li>
-                            <li class="text blue_color">
-                                <a href="https://help.crypt.bot/crypto-pay-api#authorizing-your-app" target="_blank" class="link">multipart/form-data</a>
-                            </li>
-                        </ul>
+                        <div class="quick-start_step__desc">
+                            <h3 class="title">
+                                Crypto Pay API Request
+                            </h3>
+                            <p class="text">
+                                Requests are only served over HTTPS To pass parameters use:
+                            </p>
+                            <ul class="list">
+                                <li class="text blue_color">
+                                    <a href="https://en.wikipedia.org/wiki/Query_string" target="_blank" class="link">URL query string</a>
+                                </li>
+                                <li class="text blue_color">
+                                    <a href="https://help.crypt.bot/crypto-pay-api#authorizing-your-app" target="_blank" class="link">application/json</a>
+                                </li>
+                                <li class="text blue_color">
+                                    <a href="https://help.crypt.bot/crypto-pay-api#authorizing-your-app" target="_blank" class="link">application/x-www-form-urlencoded</a>
+                                </li>
+                                <li class="text blue_color">
+                                    <a href="https://help.crypt.bot/crypto-pay-api#authorizing-your-app" target="_blank" class="link">multipart/form-data</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="quick-start_step">
-                    <div class="quick-start_step__desc flex_width_40">
+                <div class="quick-start_step reverse">
+                    <div class="quick-start_step__title flex_width_40">
                         <div class="quick-start_step__number">
                             3
                         </div>
-                        <h3 class="title">
-                            Getting updates
-                        </h3>
-                        <p class="text">
-                            There are two ways of receiving<br/>updates for your app:
-                        </p>
-                        <ul class="list">
-                            <li class="text blue_color">
-                                <a href="https://help.crypt.bot/crypto-pay-api#getInvoices" target="_blank" class="link">getInvoices</a>
-                                <span class="text"> method to get a list of created invoices.</span>
-                            </li>
-                            <li class="text blue_color">
-                                <a href="https://help.crypt.bot/crypto-pay-api#webhooks" target="_blank" class="link">Webhooks</a>
-                                <span class="text"> to receive updates in realtime.</span>
-                            </li>
-                        </ul>
+                        <div class="quick-start_step__desc">
+                            <h3 class="title">
+                                Getting updates
+                            </h3>
+                            <p class="text">
+                                There are two ways of receiving updates for your app:
+                            </p>
+                            <ul class="list">
+                                <li class="text blue_color">
+                                    <a href="https://help.crypt.bot/crypto-pay-api#getInvoices" target="_blank" class="link">getInvoices</a>
+                                    <span class="text"> method to get a list of created invoices.</span>
+                                </li>
+                                <li class="text blue_color">
+                                    <a href="https://help.crypt.bot/crypto-pay-api#webhooks" target="_blank" class="link">Webhooks</a>
+                                    <span class="text"> to receive updates in realtime.</span>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="flex_width_60">
+                    <div class="quick-start_step__visual flex_width_60">
                         <div class="quick-start_step__example">
                             <div class="quick-start_step__content flex_center full_size background_blue_grad">
                                 <div class="message codes">
@@ -730,7 +742,7 @@
                             Crypto Pay API
                         </h2>
                         <p class="text white_color">
-                            Explore available methods and types<br/>and integrate them in any programming language.
+                            Explore available methods and types and integrate them in any programming language.
                         </p>
                         <a href="https://help.crypt.bot/crypto-pay-api" target="_blank" class="button white">
                             Open API Docs
@@ -742,11 +754,11 @@
         <div class="container">
             <div id="community" class="community">
                 <div class="community_title">
-                    <h2 class="title mb_24">
+                    <h2 class="title">
                         Join dev community
                     </h2>
                     <p class="text">
-                        Connect with bot developers and explore the possibilities<br/>
+                        Connect with bot developers and explore the possibilities
                         our crypto payments service unlocks.
                     </p>
                 </div>
