CB-011 add one click to start animation

--- a/src/index.html
+++ b/src/index.html
@@ -320,13 +320,13 @@
                 </div>
                 <div class="features_horizontal">
                     <div class="features_vertical flex_width_40">
-                        <div class="feature">
+                        <div id="create_app" class="feature">
                             <div class="feature_one-click">
                                 <div class="feature_one-click__animation">
-                                    <button class="feature_one-click__button">
+                                    <button id="create_app_btn" class="feature_one-click__button">
                                         &#127965; Create App
                                     </button>
-                                    <div class="feature_one-click__arrow">
+                                    <div id="create_app_arrow" class="feature_one-click__arrow">
                                         <div class="feature_one-click__mouse" style="background-image: url('assets/images/mouse.png')"></div>
                                    </div>
                                 </div>
